--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@repo/ui": "workspace:*",
+    "@stomp/stompjs": "^7.2.1",
+    "@types/sockjs-client": "^1.5.4",
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
@@ -20,6 +22,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
     "react-toastify": "^11.0.5",
+    "sockjs-client": "^1.6.1",
     "yup": "^1.7.1",
     "zod": "^4.3.5"
   },
